syntax = "proto3";

message VectorState { // Next = 3
  double x = 1;
  double y = 2;
}
